Internal-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-server
spec:
  selector:
    app: file-server
  ports:
  - port: 80
    targetPort: 8080
