ALB -Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-server
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:<ACCOUNT_ID>:certificate/<CERT_ID>
spec:
  rules:
  - host: file-server.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: file-server
            port:
              number: 80
